Fix CIT resource loading (wrong namespace), redesign Texture Builder with named slots
Co-authored-by: Cursor <cursoragent@cursor.com>